methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
def faireV(){
^PictureMono2:1: error: expected class or object definition
def faireV(){
^PictureMono2:22: error: expected class or object definition
def faireMotif(X,Y){
^